--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-    <title>Getting Started</title>
+    <title>StudyCenter</title>
 </head>
 
 <body>
 
     <div id="app"/>
-    <script src="bundle.js"></script>
 </body>
 
 </html>
