--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
 
     <div id="app"/>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 </body>
 
 </html>
